# GameOfLife

./: CMakeLists.txt  README.md
include/: GameOfLife.h  Grid.h  Settings.h
src/: GameOfLife.cpp  Grid.cpp  main.cpp
